finish adding html content

--- a/the-sound-of-trip-hop.html
+++ b/the-sound-of-trip-hop.html
@@ -61,6 +61,30 @@
                             <span>Los Angeles, California</span>
                             <button>FOLLOW</button>
                         </span>
+                        <span class="artist-profile" id="kelli-alli">
+                            <a href="https://f4.bcbits.com/img/0002179378_2.jpg">
+                                <img src="./images/bandcamp/profile-pics/kelli-ali.jpg" alt="">
+                            </a>
+                            <a href="https://kelliali.bandcamp.com/">Kelli Ali</a>
+                            <span>London, UK</span>
+                            <button>FOLLOW</button>
+                        </span>
+                        <span class="artist-profile" id="sevdaliza">
+                            <a href="https://f4.bcbits.com/img/0002179378_2.jpg">
+                                <img src="./images/bandcamp/profile-pics/sevdaliza.jpg" alt="">
+                            </a>
+                            <a href="https://sevdaliza.bandcamp.com/">Sevdaliza</a>
+                            <span>Netherlands</span>
+                            <button>FOLLOW</button>
+                        </span>
+                        <span class="artist-profile" id="pale-spring">
+                            <a href="https://f4.bcbits.com/img/0019743300_20.jpg">
+                                <img src="./images/bandcamp/profile-pics/pale-spring.jpg" alt="">
+                            </a>
+                            <a href="https://palespring.bandcamp.com/">Pale Spring</a>
+                            <span>Los Angeles, California</span>
+                            <button>FOLLOW</button>
+                        </span>
                     </div>
                     <div class="mid-column">
                         <p>
@@ -114,6 +138,150 @@
                         </p>
                         <h2>Sneaker Pimps</h2>
                         <a href="https://sneakerpimps.bandcamp.com/album/becoming-x" class="link3">Becoming X</a>
+                        <div class="player-container">
+                            <div class="player-img-container">
+                                <img src="./images/bandcamp/covers/becoming-x.jpg" alt="">
+                            </div>
+                            <audio src="" controls></audio>
+                            <span class="player-links">
+                                <a href="https://sneakerpimps.bandcamp.com/album/becoming-x?action=buy">
+                                    BUY
+                                </a>
+                                <button></button>
+                                <a href="https://sneakerpimps.bandcamp.com/album/becoming-x">
+                                    GO TO ALBUM
+                                </a>
+                            </span>
+                        </div>
+                        <p>
+                            The Sneaker Pimps’s most iconic album, Becoming X, helped to solidify the UK trip-hop
+                            sound. Released in 1996, the album featured the seductive croon of
+                            <a href="https://kelliali.bandcamp.com/" class="link2">
+                                Kelli Ali
+                            </a>
+                            , and breakout hits “6 Underground” and “Spin Spin Sugar” combined dreamy electronica
+                            beats with crackling vinyl samples and layers of acoustic guitar and keyboards.
+                            Ali departed after this album, but founding members Chris Corner and Liam Howe
+                            pressed on, with Corner assuming vocal duties on the two albums that followed.
+                        </p>
+                        <p>
+                            “When we were starting to make music in the early ‘90s, we were making instrumental 
+                            dance music, and there was a similar scene in London,” says Howe, who in addition 
+                            to his role in Sneaker Pimps has also produced tracks for 
+                            <a href="https://www.youtube.com/watch?v=Dii4rx05uc4" class="link2">
+                                Lana Del Rey
+                            </a>
+                            , 
+                            <a href="https://www.youtube.com/watch?v=kyB61XiggvM" class="link2">
+                                FKA Twigs
+                            </a>
+                            , and 
+                            <a href="https://www.youtube.com/watch?v=-vHi83LTQjU" class="link2">
+                                Marina and the Diamonds
+                            </a>
+                            . “We were about three-quarters of the way through writing Becoming X when Portishead’s Dummy came out, and that’s when the defining term ‘trip-hop’ landed. We used to call it ‘head music’ before that.” As its title suggests, the group’s fourth album Squaring the Circle is a return to their musical beginnings. “The new album has one foot in that ‘90s trip-hop era, because that’s part of our DNA, [but it’s also] a mixture of Becoming X, Splinter, and Blood Sport. It’s the same band, doing the same thing that we always did.”
+                        </p>
+                        <h2>Kelli Ali</h2>
+                        <a href="https://kelliali.bandcamp.com/album/ghostdriver" class="link3">Ghostdriver</a>
+                        <div class="player-container">
+                            <div class="player-img-container">
+                                <img src="./images/bandcamp/covers/ghostdriver.jpg" alt="">
+                            </div>
+                            <audio src="" controls></audio>
+                            <span class="player-links">
+                                <a href="https://kelliali.bandcamp.com/album/ghostdriver?action=buy">
+                                    BUY
+                                </a>
+                                <button></button>
+                                <a href="https://kelliali.bandcamp.com/album/ghostdriver">
+                                    GO TO ALBUM
+                                </a>
+                            </span>
+                        </div>
+                        <p>
+                            Former lead singer of Sneaker Pimps, Kelli Ali’s most recent album is the 
+                            soundtrack to the film 
+                            <a href="https://www.imdb.com/title/tt8142690/" class="link2">
+                                Ghostdriver
+                            </a>
+                            (2021), which she wrote, produced, and directed. It’s a glimmering, romantic beast 
+                            of a record, full of skittering percussion, operatic harmonies, and gothic 
+                            melodrama; songs like “Fade To Black” and “Waiting For Grace” are sweetly 
+                            melancholy, and the tone  is appropriately cinematic throughout, employing 
+                            both jazzy brass and, on tracks like “The Fear of London,” video game-style synths. 
+                            Howe contributed extensively to the mix and production, a throwback to their days 
+                            working together in Sneaker Pimps. “I’ve always kept in touch with Kelli, she’s 
+                            lovely,” he says. “She’s got fantastic character to her voice—it’s perfect for a 
+                            soundtrack. In trip-hop, there was so much influence from ‘60s and ‘70s film 
+                            soundtracks, and that noir, cinematic sound is a great fit for her voice.”
+                        </p>
+                        <h2>Sevdaliza</h2>
+                        <a href="https://sevdaliza.bandcamp.com/album/shabrang" class="link3">Shabrang</a>
+                        <div class="player-container">
+                            <div class="player-img-container">
+                                <img src="./images/bandcamp/covers/shabrang.jpg" alt="">
+                            </div>
+                            <audio src="" controls></audio>
+                            <span class="player-links">
+                                <a href="https://sevdaliza.bandcamp.com/album/shabrang?action=buy">
+                                    BUY
+                                </a>
+                                <button></button>
+                                <a href="https://sevdaliza.bandcamp.com/album/shabrang">
+                                    GO TO ALBUM
+                                </a>
+                            </span>
+                        </div>
+                        <p>
+                            Netherlands-based 
+                            <a href="https://sevdaliza.bandcamp.com/music" class="link2">
+                                Sevdaliza
+                            </a> 
+                            channels her experiences as an Iranian-Dutch woman into trip-hop tracks 
+                            that are both political and personal. Born in Tehran, Sevdaliza has used 
+                            her music and her public presence to address prejudice against Muslims in 
+                            Western countries. Her 2017 track “
+                            <a href="https://sevdaliza.bandcamp.com/track/bebin" class="link2">
+                                Bebin
+                            </a>
+                            ” protested the 
+                            <a href="https://www.aclu-wa.org/pages/timeline-muslim-ban" class="link2">
+                                ban on Muslims entering the U.S
+                            </a>
+                            .; it was the first song she’d performed entirely in Persian. Her 2020 album 
+                            Shabrang (a Farsi phrase that loosely translates to mean “night color”), is 
+                            both malevolent and powerfully feminine. Bone-chilling strings, snarling beats, 
+                            and futuristic urban club sounds lay the groundwork for her compelling voice. 
+                            She sounds bereft on Farsi ballad “Gole Bi Goldoon,” fierce on “Darkest Hour,” 
+                            and vulnerable over the slow clash of piano and softly clattering drums on 
+                            “All Rivers At Once.”
+                        </p>
+                        <h2>Pale Spring</h2>
+                        <a href="https://palespring.bandcamp.com/album/cygnus" class="link3">CYGNUS</a>
+                        <div class="player-container">
+                            <div class="player-img-container">
+                                <img src="./images/bandcamp/covers/cygnus.jpg" alt="">
+                            </div>
+                            <audio src="" controls></audio>
+                            <span class="player-links">
+                                <a href="https://palespring.bandcamp.com/album/cygnus?action=buy">
+                                    BUY
+                                </a>
+                                <button></button>
+                                <a href="https://palespring.bandcamp.com/album/cygnus">
+                                    GO TO ALBUM
+                                </a>
+                            </span>
+                        </div>
+                        <p>
+                            Los Angeles’s Emily Harper Scott and her partner and co-producer Drew Scott 
+                            make the sort of fuzzy, spacious electronica that invites listeners to disappear 
+                            inside the warmth of their sound. CYGNUS, released in 2019, is a showcase for 
+                            Harper’s dexterous range, and her instincts for when to dial up the vocal 
+                            dramatics and when to leave just aching silence. Her improvisational approach 
+                            to songwriting on CYGNUS has roots in jazz and R&B—though the glitchy beats, 
+                            gothic instrumentals, and surreal atmosphere are all signature trip-hop.
+                        </p>
                         <div class="article-end"></div>
                         <a href="https://bandcamp.com/tag/electronic" class="tag">electronic</a>
                         <p class="read-more">
@@ -122,7 +290,7 @@
                         </p>
                     </div>
                     <div class="side-column">
-                        <span class="album-merch">
+                        <span class="album-merch" id="sneakers-pimp-01">
                             <span>
                                 Merch for this release: Compact Disc (CD), 2 x Vinyl LP, T-Shirt/Apparel, 
                                 , Poster/Print
@@ -132,6 +300,25 @@
                                 <img src="./images/bandcamp/album-merch/fighter2.jpg" alt="">
                                 <img src="./images/bandcamp/album-merch/fighter3.jpg" alt="">
                                 <img src="./images/bandcamp/album-merch/fighter4.jpg" alt="">
+                            </span>
+                        </span>
+                        <span class="album-merch" id="sneakers-pimp-02">
+                            <span>
+                                Merch for this release: Compact Disc (CD), Vinyl LP
+                            </span>
+                            <img src="./images/bandcamp/album-merch/becoming-x-01.jpg" alt="">
+                            <span class="merch-photos">
+                                <img src="./images/bandcamp/album-merch/becoming-x-02.jpg" alt="">
+                            </span>
+                        </span>
+                        <span class="album-merch" id="pale-spring">
+                            <span>
+                                Merch for this release: Vinyl LP, Vinyl
+                            </span>
+                            <img src="./images/bandcamp/album-merch/cygnus-01.jpg" alt="">
+                            <span class="merch-photos">
+                                <img src="./images/bandcamp/album-merch/cygnus-02.jpg" alt="">
+                                <img src="./images/bandcamp/album-merch/cygnus-03.jpg" alt="">
                             </span>
                         </span>
                     </div>
