add style to index.html

--- a/the-sound-of-trip-hop.html
+++ b/the-sound-of-trip-hop.html
@@ -43,7 +43,10 @@
                     <a href="https://daily.bandcamp.com/lists" class="link1">LISTS</a>
                     <h1 >The Sound of Trip-Hop, Past and Present</h1>
                     <p>
-                        By <a href="https://daily.bandcamp.com/contributors/catwoods" class="link2">Cat Woods</a>
+                        By 
+                        <a href="https://daily.bandcamp.com/contributors/catwoods" class="link2">
+                            Cat Woods
+                        </a>
                         · September 23,2021
                     </p>
                 </div>
@@ -56,9 +59,14 @@
                         The definition of “trip-hop” is a slippery one; even one of the genre’s pioneers
                         has trouble pinning it down. “Essentially, it needs to have a down-tempo beat,
                         to be hypnotic and narcotic to an extent—that chilled-out, slowed down feeling,”
-                        says <a href="https://sneakerpimps.bandcamp.com/music" class="link2">Sneaker Pimps</a>’s
-                        Liam Howe, whose album
-                        <a href="https://sneakerpimps.bandcamp.com/album/becoming-x" class="link2">Becoming X</a>
+                        says 
+                        <a href="https://sneakerpimps.bandcamp.com/music" class="link2">
+                            Sneaker Pimps
+                        </a>
+                        ’s Liam Howe, whose album
+                        <a href="https://sneakerpimps.bandcamp.com/album/becoming-x" class="link2">
+                            Becoming X
+                        </a>
                         was one of the genre’s foundational LPs. “It also has to have a little bit of dub,
                         a bit of funk, soul, and jazz. We put quite a lot of guitars and folk music into it
                         as well, and if you push genres like hip-hop and jazz as far as they can go,
