fix index css img src

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <header>
             <nav class="menu-nav">
                 <a href="https://bandcamp.com/">
-                    <img src="./images/bandcamp/logo1.png" alt="" class="nav-logo">
+                    <img src="./images/bandcamp/logo-01.png" alt="" class="nav-logo">
                 </a>
                 <ul>
                     <li class="nav-button">
@@ -160,7 +160,7 @@
         </main>
         <footer>
             <a href="https://bandcamp.com/?from=logo">
-                <img src="./images/bandcamp/logo2.png" alt="">
+                <img src="./images/bandcamp/logo-02.png" alt="">
             </a>
             <span>
                 <a href="https://bandcamp.com/login?from=footer">log in</a>
